# gnss

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/gdrt_plugin/: CMakeLists.txt  station.cpp  station.h
apps/gdrt_plugin/descriptions/: gdrt_plugin.rst
apps/gnss_plugin/: CMakeLists.txt  app.cpp  app.h  channel.h  channel.ipp  main.cpp  settings.cpp  settings.h  station.cpp  station.h  udpclient.cpp  udpclient.h
apps/gnss_plugin/config/: gnss_plugin.cfg
apps/gnss_plugin/descriptions/: gnss_plugin.rst  gnss_plugin.xml
templates/: CMakeLists.txt
templates/gdrt/: setup.py
templates/gnss/: seedlink_plugin.tpl  setup.py
