SET(PACKAGE_NAME GDRT)
SET(APP_NAME gdrt_plugin)

SET(
	GDRT_SOURCES
		main.cpp
		app.cpp
		settings.cpp
		station.cpp
		udpclient.cpp
)


INCLUDE_DIRECTORIES(${LIBMSEED_INCLUDE_DIR})
INCLUDE_DIRECTORIES(../../../../base/seedlink/libs/plugin)
ADD_EXECUTABLE(gdrt_plugin ${GDRT_SOURCES})
TARGET_LINK_LIBRARIES(${APP_NAME} ${Boost_system_LIBRARY} mseed slplugin)
SC_LINK_LIBRARIES_INTERNAL(${APP_NAME} client)
SC_ADD_VERSION(${PACKAGE_NAME} ${APP_NAME})

INSTALL(TARGETS ${APP_NAME} RUNTIME DESTINATION ${SC3_PACKAGE_SHARE_DIR}/plugins/seedlink)

FILE(GLOB descs "${CMAKE_CURRENT_SOURCE_DIR}/descriptions/*.xml")
INSTALL(FILES ${descs} DESTINATION ${SC3_PACKAGE_APP_DESC_DIR})

FILE(GLOB cfgs "${CMAKE_CURRENT_SOURCE_DIR}/config/*.cfg")
INSTALL(FILES ${cfgs} DESTINATION ${SC3_PACKAGE_CONFIG_DIR})

